[metadata]
name = rpc_debugger
description = fancy trading bot!
version = 0.0.1
author = zhe
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    rpc_debugger
python_requires = >=3.6
# In case source code is in a differen path other than root.
#package_dir =
#     = src
zip_safe = no
